# mlflow-post

./: LICENSE  MLproject  README.md  gitignore  pyproject.toml  python_env.yaml  train.py
src/: 01_tracking_autolog.py  02_experimentations.py  03_models.py  04_registry_alias.py  05_genai_tracing.py
